cambie padding de ul

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
     <header>
+        <div class="menu_bar">
+            <div class="btn-menu"><span class="fas fa-bars"></span></div>
+        </div>
         <nav>
             <ul>
                 <li><a href="#home"><span class="fas fa-home"></span><span class="text">Inicio</span></a> </li>
