agregue logo logo al nav respnsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="menu_bar">
-            <div class="btn-menu"><span class="fas fa-bars"></span></div>
+            <div class="btn-menu"><span class="fas fa-bars"></span><img src="./images/logo.jpg" alt=""></div>
         </div>
         <nav>
             <ul>
